--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ python-dotenv
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
-google-api-python-client 
+google-api-python-client
+transformers
+torch
+pandas
+plotly 
